-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
Patch v2_15_61-238-g94d05d0737 from LU-17379, is using CONNECTION_SWITCH_MAX when trying to shrink the connection timeout instead of CONNECTION_SWITCH_MIN.
/* make it quick at first round */ if (timeout > CONNECTION_SWITCH_MIN) at_reset(at, CONNECTION_SWITCH_MAX);
- is related to
-
LU-17379
try MGS NIDs more quickly at initial mount
-
- Resolved
-